Clean up of ValuationController
