# src/main/java/net/finmath/smartcontract/service/ValuationController.java
@@ -10,6 +10,7 @@ package net.finmath.smartcontract.service;
 import net.finmath.smartcontract.api.ValuationApi;
 import net.finmath.smartcontract.model.MarginRequest;
 import net.finmath.smartcontract.model.ValuationResult;
+import net.finmath.smartcontract.model.ValueRequest;
 import net.finmath.smartcontract.util.SDCConstants;
 import net.finmath.smartcontract.util.SDCDateUtil;
 import net.finmath.smartcontract.util.SDCProperties;
@@ -48,10 +49,10 @@ public class ValuationController implements ValuationApi {
 	 * @param marginRequest The request
 	 * @return String Json representing the valuation.
 	 */
+	@Override
 	public ResponseEntity<ValuationResult> margin(MarginRequest marginRequest) {
 		HttpHeaders responseHeaders = new HttpHeaders();
 		responseHeaders.add("Responded", "margin");
-
 
 		ValuationResult margin = null;
 		try {
@@ -70,131 +71,27 @@ public class ValuationController implements ValuationApi {
 	/**
 	 * Request mapping for the settlementvaluationForProductAsFPMLOneCurve
 	 *
-	 * @param marketData    Market data Json file1
-	 * @param tradeData     Trade FPML file
-	 * @param valuationDate The date to be used in valuation.
+	 * @param valueRequest The request
 	 * @return String Json representing the valuation.
 	 */
-	public ResponseEntity<String> value(String marketData, String tradeData, String valuationDate) {
+	@Override
+	public ResponseEntity<ValuationResult> value(ValueRequest valueRequest) {
 
 		HttpHeaders responseHeaders = new HttpHeaders();
-		responseHeaders.add("Responded", "SettlementValuationControllerOneCurve");
+		responseHeaders.add("Responded", "value");
 
-		LocalDate marketDataDate = SDCDateUtil.getDateFromJSON(marketData, SDCConstants.DATE_FORMAT_yyyyMMdd);
-		String currentDateString = SDCDateUtil.getStringFromDate(marketDataDate, SDCConstants.DATE_FORMAT_yyyyMMdd);
-
-		LocalDate previousDate = SDCDateUtil.getPreviousBusinessDay(marketDataDate, new BusinessdayCalendarExcludingTARGETHolidays());
-		logger.info("T-1 = " + previousDate);
-
-		String previousDateString = SDCDateUtil.getStringFromDate(previousDate, SDCConstants.DATE_FORMAT_yyyyMMdd);
-		String FileHeader = SDCProperties.getProperty(SDCConstants.DATA_PATH) + File.separator + SDCProperties.getProperty(SDCConstants.MARKET_DATA_FILE_HEADER);
-		String previousJson = FileHeader + previousDateString + ".json";
-		String currentJson = FileHeader + currentDateString + ".json";
-
-		File previousFile = new File(previousJson);
-		File currentFile = new File(currentJson);
-
-		if (!Files.exists(previousFile.toPath())) {
-			String message = "The file " + previousJson + " does not exist!";
-			logger.error(message);
-			return new ResponseEntity<String>(message, responseHeaders, HttpStatus.BAD_REQUEST);
-		}
-		logger.info("Previous File = " + previousFile);
-		String json2String = null;
+		ValuationResult value = null;
 		try {
-			json2String = new String(Files.readAllBytes(previousFile.toPath()));
-		} catch (IOException e) {
-			throw new RuntimeException(e);
-		}
-		LocalDate ld2 = SDCDateUtil.getDateFromJSON(json2String, SDCConstants.DATE_FORMAT_yyyyMMdd);
-
-
-		logger.info("Starting Margin Calculation with dates " + marketDataDate + " and  " + ld2);
-		MarginCalculator marginCalculator = new MarginCalculator();
-
-		if (logger.isDebugEnabled()) {
-			logger.debug("json1bytes: " + marketData);
-			logger.debug("json2bytes: " + json2String);
-			logger.debug("fpmlbytes: " + tradeData);
-		}
-		try {
-			marginCalculator.getValue(marketData, json2String, tradeData);
+			MarginCalculator marginCalculator = new MarginCalculator();
+			value = marginCalculator.getValue(valueRequest.getMarketData(), null, valueRequest.getTradeData());
+			logger.info(value.toString());
+			return ResponseEntity.ok(value);
 		} catch (Exception e) {
 			logger.error("Failed to calculate margin.");
+			logger.info(value.toString());
 			e.printStackTrace();
-		}
-
-		String resultJSON = marginCalculator.getContractValuationAsJSON();
-		logger.info(resultJSON);
-		try {
-			Files.write(currentFile.toPath(), marketData.getBytes());
-		} catch (IOException e) {
 			throw new RuntimeException(e);
 		}
-		return new ResponseEntity<String>(resultJSON, responseHeaders, HttpStatus.OK);
-	}
-
-	/**
-	 * Request mapping for the settlementvaluationForProductAsFPML
-	 *
-	 * @param tradeAsFPML       Trade FPML file
-	 * @param marketDataAsJson1 Market data Json file1
-	 * @param marketDataAsJson2 Market data Json file2
-	 * @return String Json representing the valuation.
-	 */
-	public ResponseEntity<String> settlementvaluationForProductAsFPML(MultipartFile marketDataAsJson1, MultipartFile marketDataAsJson2, MultipartFile tradeAsFPML) {
-		String json1String = null;
-		try {
-			json1String = new String(marketDataAsJson1.getBytes());
-		} catch (IOException e) {
-			throw new RuntimeException(e);
-		}
-		String json2String = null;
-		try {
-			json2String = new String(marketDataAsJson2.getBytes());
-		} catch (IOException e) {
-			throw new RuntimeException(e);
-		}
-		String fpmlString = null;
-		try {
-			fpmlString = new String(tradeAsFPML.getBytes());
-		} catch (IOException e) {
-			throw new RuntimeException(e);
-		}
-
-		LocalDate ld1 = SDCDateUtil.getDateFromJSON(json1String, SDCConstants.DATE_FORMAT_yyyyMMdd);
-		LocalDate ld2 = SDCDateUtil.getDateFromJSON(json2String, SDCConstants.DATE_FORMAT_yyyyMMdd);
-
-		HttpHeaders responseHeaders = new HttpHeaders();
-		responseHeaders.add("Responded", "SettlementValuationControllerTwoCurves");
-		boolean b = true;
-		if (SDCProperties.getProperty(SDCConstants.MARKET_DATA_FILE_HEADER).equals("TRUE")) {
-			b = SDCDateUtil.isFollowingBusinessDays(ld1, ld2, new BusinessdayCalendarExcludingTARGETHolidays());
-		}
-
-		if (!b) {
-			String message = "The dates " + ld1 + " and  " + ld2 + " are not T, T-1 following business dates!";
-			logger.error(message);
-			return new ResponseEntity<String>(message, responseHeaders, HttpStatus.BAD_REQUEST);
-		}
-		logger.info("Starting Margin Calculation with dates " + ld1 + " and  " + ld2);
-		MarginCalculator marginCalculator = new MarginCalculator();
-
-
-		try {
-			marginCalculator.getValue(json1String, json2String, fpmlString);
-		} catch (Exception e) {
-			logger.error("Failed to calculate margin.");
-			e.printStackTrace();
-		}
-		if (logger.isDebugEnabled()) {
-			logger.debug("json1bytes: " + json1String);
-			logger.debug("json2bytes: " + json2String);
-			logger.debug("fpmlbytes: " + fpmlString);
-		}
-		String resultJSON = marginCalculator.getContractValuationAsJSON();
-		logger.info(resultJSON);
-		return new ResponseEntity<String>(resultJSON, responseHeaders, HttpStatus.OK);
 	}
 
 	/**
